--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,22 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    buildFeatures{
+        dataBinding = true // for data binding
+        viewBinding = true // for view binding
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.robustbinary.ramadhan"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        buildFeatures.dataBinding
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -48,6 +57,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
